# mtserver

./: INSTALL  README.md  autogen.sh  configure.ac
m4/: ax_check_library.m4
src/: Makefile  Makefile.am  client.c  client.h  config.c  config.ini  main.c  main.h  thread.c  thread.h
src/.deps/: client.Po  config.Po  ini.Po  io_buffer.Po  main.Po  mc.Po  thread.Po
